# Pokedate

./: .gitignore  CMakeLists.txt  README.md  setup
Source/: main.lua  pdxinfo
src/: main.c  main.cpp
src/core/: .gitignore  audio.cpp  blitter.cpp  eeprom.cpp  input.cpp  irq.cpp  lcd.cpp  machine.cpp  operations.cpp  timers.cpp
src/include/: audio.h  blitter.h  input.h  lcd.h  machine.h  table.h  timers.h
